--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,10 +3,12 @@ body {
   margin: 0;
 }
 
-#map,
-body,
-html {
-  height: 100%;
+#map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 
