--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,8 +9,56 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 1; 
 }
 
+#mapHeader {
+  position: absolute;
+  text-align: center;
+  left: 45%;
+  z-index: 10; 
+  font-size: 24px;
+  color: gold;
+  -webkit-text-stroke: 1px black;
+}
+
+#categoryDropdownContainer {
+  position: absolute;
+  top: 2.5%;
+  left: 15%;
+  z-index: 2; 
+  background-color: rgba(253, 253, 253, 0.5);
+  font-size: 16px;
+  color: black;
+}
+
+#categoryDropdown {
+  width: 150px;
+}
+
+#dateRangePicker {
+  position: absolute;
+  top: 5%;
+  right: 15%;
+  z-index: 10; 
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  z-index: 10; 
+}
+.date-range-label {
+  position: absolute;
+  display: block;
+  top: 2.5%;
+  right: 15.5%;
+  margin-bottom: 5px;
+  z-index: 2;
+  background-color: rgba(253, 253, 253, 0.5);
+  font-size: 16px;
+  color: black;
+}
 
 .legend {
   padding: 10px;
@@ -32,10 +80,20 @@ body {
   width: 90%;
 }
 
-.leaflet-control-container .leaflet-timeline-controls {
+/* .leaflet-control-container .leaflet-timeline-controls {
   width: 100%;
   box-sizing: border-box;
   margin: 0;
   margin-bottom: 15px;
 
+} */
+
+.gold-marker {
+  color: gold;
+  border: 2px solid black;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 30px;
+  font-size: 20px;
 }
+
