--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,99 +1,97 @@
 body {
+  font-family: Arial, sans-serif;
+  margin: 5%;
+  padding: 20px;
+  height: 100vh;
+  background: linear-gradient(to bottom right, navy, black);
+  background-size: cover;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+header {
+  font-family: Arial, sans-serif;
+  position: absolute;
+  left: 50%;
+  margin: 5%;
   padding: 0;
-  margin: 0;
 }
-
-#map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1; 
-}
-
-#mapHeader {
-  position: absolute;
+.header {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
-  left: 45%;
-  z-index: 10; 
-  font-size: 24px;
-  color: gold;
-  -webkit-text-stroke: 1px black;
 }
-
-#categoryDropdownContainer {
-  position: absolute;
-  top: 2.5%;
-  left: 15%;
-  z-index: 2; 
-  background-color: rgba(253, 253, 253, 0.5);
-  font-size: 16px;
-  color: black;
+.white-textl{
+  text-align: left;
+  color: white;
 }
-
-#categoryDropdown {
-  width: 150px;
+.white-textr{
+  text-align: right;
+  color: white;
 }
-
-#dateRangePicker {
-  position: absolute;
-  top: 5%;
-  right: 15%;
-  z-index: 10; 
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  z-index: 10; 
-}
-.date-range-label {
-  position: absolute;
-  display: block;
-  top: 2.5%;
-  right: 15.5%;
-  margin-bottom: 5px;
-  z-index: 2;
-  background-color: rgba(253, 253, 253, 0.5);
-  font-size: 16px;
-  color: black;
-}
-
-.legend {
-  padding: 10px;
-  line-height: 18px;
-  color: #555;
-  background: #fff;
-  border-radius: 5px;
-}
-
-.legend i {
-  float: left;
-  width: 18px;
-  height: 18px;
-  margin-right: 8px;
-  opacity: 0.7;
-}
-
-.leaflet-bottom.leaflet-left {
-  width: 90%;
-}
-
-/* .leaflet-control-container .leaflet-timeline-controls {
-  width: 100%;
+.section {
   box-sizing: border-box;
-  margin: 0;
-  margin-bottom: 15px;
-
-} */
-
-.gold-marker {
-  color: gold;
-  border: 2px solid black;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 30px;
-  font-size: 20px;
+  width: 50%;
+  height: fit-content;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  flex-direction: column;
+  height: fit-content;
 }
 
+#section1 {
+  order: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+
+}
+
+#section2 {
+  order: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+#section3 {
+  order: 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+#section4 {
+  order: 4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+#section5 {
+  order: 5;
+  width: 100%;
+  bottom: 20px;
+}
+
+#dashboard {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.summary-section {
+  width: 100%;
+  border: 1px solid #ccc;
+  padding-top: 0px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
+  max-width: 800px;
+  height: fit-content;
+}
