--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,19 +2,18 @@ body {
   font-family: Arial, sans-serif;
   margin: 5%;
   padding: 20px;
-  height: 100vh;
-  background: linear-gradient(to bottom right, navy, black);
+  background: linear-gradient(to bottom right, #1b2f4e, #8ea8e2);
   background-size: cover;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-header {
-  font-family: Arial, sans-serif;
-  position: absolute;
-  left: 50%;
-  margin: 5%;
-  padding: 0;
+#header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 .header {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -44,6 +43,8 @@ header {
   flex-direction: column;
   align-items: center;
   height: fit-content;
+  color: white;
+  padding-bottom: 20px;
 
 }
 
@@ -52,6 +53,9 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: fit-content;
+  color: white;
+  padding-bottom: 20px;
 
 }
 
@@ -59,22 +63,31 @@ header {
   order: 3;
   display: flex;
   flex-direction: column;
-  align-items: center;
-
+  text-align: right;
+  align-items: flex-end;
+  height: fit-content;
+  color: white;
+  padding-bottom: 20px;
 }
 
 #section4 {
   order: 4;
   display: flex;
   flex-direction: column;
-  align-items: center;
-
+  text-align: left;
+  align-items: flex-start;
+  color: white;
+  padding: 40px;
 }
 
 #section5 {
   order: 5;
-  width: 100%;
-  bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+  color: white;
+  padding-bottom: 20px;
 }
 
 #dashboard {
@@ -88,10 +101,19 @@ header {
   width: 100%;
   border: 1px solid #ccc;
   padding-top: 0px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   padding-left: 20px;
   padding-right: 20px;
   box-sizing: border-box;
   max-width: 800px;
   height: fit-content;
+}
+.dropdown-container {
+  background-color: #212529;
+  text-align: left;
+}
+#charttypes {
+  width: fit-content; 
+  margin-left: auto;
+  margin-right: 20px; 
 }
